Implemented /users CRUD operations and /users/username/{username} find operation
