# api/controllers/community.js
@@ -1,0 +1,24 @@
+'use strict'
+
+var log = require('../helpers/logger')
+
+module.exports = {
+  listCommunuties: function (request, response, next) {
+
+  },
+  createCommunity: function (request, response, next) {
+
+  },
+  findCommunityById: function (request, response, next) {
+
+  },
+  updateCommunityById: function (request, response, next) {
+
+  },
+  removeCommunityById: function (request, response, next) {
+
+  },
+  partiallyUpdateCommunityById: function (request, response, next) {
+
+  }
+}
